--- a/css/main-style.css
+++ b/css/main-style.css
@@ -61,7 +61,7 @@ footer{
 }
 
 .caption{
-	margin-top: 20px;
+	margin-top: 40px;
 	margin-bottom: 10px;
 	width: 100%;
 	text-align: center;
@@ -73,6 +73,8 @@ footer{
 	border: 1px solid black;
 	background-color: 	#fff;
 	box-shadow: inset 0 0 30px #555; 
+	padding: 20px;
+	text-align: center;
 }
 
 .form input {
@@ -97,19 +99,21 @@ footer{
 	width: 14em;
 	margin: auto;
 	margin-top: 60px;
-	padding: 20px;
-	text-align: center;
 }
 
 #registration_form {
 	width: 20em;
 	margin: auto;
 	margin-top: 60px;
-	padding: 20px;
-	text-align: center;
 }
 
-#login_form a{
+#login_error_form {
+	width: 30em;
+	margin: auto;
+	margin-top: 60px;
+}
+
+.form a{
 	font-size: 0.8em;
 }
 
