--- a/css/main-style.css
+++ b/css/main-style.css
@@ -117,6 +117,11 @@ footer{
 	font-size: 0.8em;
 }
 
+#btn_new_war{
+	width: 35%;
+	margin: auto;
+}
+
 #warriors_form{
 	width: 90%;
 	margin: auto;
@@ -127,4 +132,54 @@ footer{
 	width: 20em;
 	margin: auto;
 	margin-top: 60px;
+}
+
+#warriors_table {
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 14px;
+	border-radius: 10px;
+	border-spacing: 0;
+	text-align: center;
+	width: 90%;
+	margin: auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	box-shadow: 0 0 10px #777; 
+}
+
+#warriors_table th {
+	background: #555;
+	color: white;
+	text-shadow: 0 1px 1px #2D2020;
+	padding: 10px 20px;
+	border-style: solid;
+	border-width: 0 1px 1px 0;
+	border-color: white;
+}
+
+#warriors_table td {
+	border-style: solid;
+	border-width: 0 1px 1px 0;
+	border-color: white;
+}
+
+#warriors_table td:first-child {
+	text-align: left;
+}
+
+#warriors_table th:first-child {
+	text-align: left;
+}
+
+#warriors_table th:last-child {
+	border-right: none;
+}
+
+#warriors_table td {
+	padding: 10px 20px;
+	background: #ddd;
+}
+
+#warriors_table tr td:last-child {
+	border-right: none;
 }
