--- a/css/main-style.css
+++ b/css/main-style.css
@@ -91,7 +91,7 @@ footer{
 	text-align: center;
 }
 
-.form input {
+.form input[type=text] {
 	border: 1px solid black;
 	box-shadow: inset 0 0 10px #555; 
 	width: 80%;
@@ -102,7 +102,20 @@ footer{
 	text-align: center;
 }
 
-.form .btn:hover {
+.btn {
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 0.9em;
+	border: 1px solid black;
+	box-shadow: inset 0 0 10px #555; 
+	width: 80%;
+	margin: auto;
+	margin-top: 0.4em;
+	height: 2em;
+	text-align: center;
+	border-radius: 4px;
+}
+
+.btn:hover {
 	box-shadow: inset 0 0 40px #333; 
 	background-color: 	#777;
 	color: #fff;
@@ -196,39 +209,4 @@ footer{
 
 .warriors_table tr td:last-child {
 	border-right: none;
-}
-
-.small_table th {
-	padding: 4px 4px;
-}
-
-.small_table td {
-	padding: 4px 4px;
-}
-
-#selection_form{
-	padding: 10px;
-	min-height: 400px;
-	margin: 20px;
-	padding-top: 30px;
-	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-	font-size: 1.2em;
-}
-
-#my_warriors_form{
-	width: 50%;
-	float: left;
-}
-
-#apponents_form{
-	width: 40%;
-	float: right;
-}
-
-#my_warriors_table{
-	margin-top: 0px;
-}
-
-#apponents_table{
-	margin-top: 0px;
 }
