--- a/css/main-style.css
+++ b/css/main-style.css
@@ -2,7 +2,8 @@
 	padding: 0;
 	margin: 0;
 	font-size: 100%;
-	font-family: Arial, sans-serif;
+	/*font-family: Arial, sans-serif;*/
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 }
 
 .error_str {
@@ -18,115 +19,16 @@ body {
 	margin: auto;
 }
 
-header{
-	border: 2px solid black;
-	text-align: center;
-	margin-top: 20px;
-	font-size: 300%;
-	background-color: 	#D3D3D3;
-}
-
-nav {
-	border: 0px solid black;
-	margin: auto;
-	height: 1.8em;
-	text-align: center;
-}
-
-nav ul{
-	list-style: none;
-	padding-top: 6px;
-}
-
-nav li {
-	display: block;
-	float: left;
-	padding: 0px 10px 0px 10px;
-	border-left: 1px solid #D3D3D3;
-}
-
-nav a{
-  color: black;
-  text-decoration: none;
-}
-
-nav a:hover{
-  text-decoration: underline;
-}
-
-nav .user-data{
-	margin-top:-4px;
-	float: right;
-	font-weight: bold;
-	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-}
 
 
-main {
-	border: 2px solid black;
-	background-color: 	#D3D3D3;
-	min-height: 520px;
-}
-
-footer{
-	text-align: center;
-	margin-top: 2px;
-	font-size: 70%;
-}
-
-.caption{
-	margin-top: 40px;
-	margin-bottom: 10px;
-	width: 100%;
-	text-align: center;
-	font-weight: bold;
-	font-size: 1.4em;
-}
-
-.form{
-	border: 1px solid black;
-	background-color: 	#fff;
-	box-shadow: inset 0 0 30px #555; 
-	padding: 20px;
-	text-align: center;
-}
-
-.form input[type=text] {
-	border: 1px solid black;
-	box-shadow: inset 0 0 10px #555; 
-	width: 80%;
-	margin: auto;
-	margin-top: 0.4em;
-	height: 1.4em;
-	padding:3px;
-	text-align: center;
-}
-
-.btn {
-	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-	font-size: 0.9em;
-	border: 1px solid black;
-	box-shadow: inset 0 0 10px #555; 
-	width: 80%;
-	margin: auto;
-	margin-top: 0.4em;
-	height: 2em;
-	text-align: center;
-	border-radius: 4px;
-}
-
-.btn:hover {
-	box-shadow: inset 0 0 40px #333; 
-	background-color: 	#777;
-	color: #fff;
-}
 
 
-#login_form{
-	width: 50%;
-	margin: auto;
-	margin-top: 60px;
-}
+
+
+
+
+
+
 
 #registration_form {
 	width: 20em;
@@ -138,10 +40,6 @@ footer{
 	width: 30em;
 	margin: auto;
 	margin-top: 60px;
-}
-
-.form a{
-	font-size: 0.8em;
 }
 
 #btn_new_war{
