--- a/css/bem-files.css
+++ b/css/bem-files.css
@@ -23,4 +23,4 @@
 @import "../blocks/warrior-data/warrior-data.css";
 @import "../blocks/battle-form/battle-form.css";
 @import "../blocks/battle-form/battle-form__versus.css";
-
+@import "../blocks/battle-form/battle-form__log.css";
