--- a/css/bem-files.css
+++ b/css/bem-files.css
@@ -24,3 +24,4 @@
 @import "../blocks/battle-form/battle-form.css";
 @import "../blocks/battle-form/battle-form__versus.css";
 @import "../blocks/battle-form/battle-form__log.css";
+@import "../blocks/battle-form/battle-form__results.css";
