--- a/css/bem-files.css
+++ b/css/bem-files.css
@@ -25,3 +25,4 @@
 @import "../blocks/battle-form/battle-form__versus.css";
 @import "../blocks/battle-form/battle-form__log.css";
 @import "../blocks/battle-form/battle-form__results.css";
+@import "../blocks/instruction/instruction.css";
